--- a/N01426963_passionproject/Content/Site.css
+++ b/N01426963_passionproject/Content/Site.css
@@ -15,3 +15,17 @@ select,
 textarea {
     max-width: 280px;
 }
+
+nav {
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.navlink {
+    float: left;
+}
+
+.dellink {
+    float: right;
+    color: #f00;
+}
