added to do list

--- a/N01426963_passionproject/Content/Site.css
+++ b/N01426963_passionproject/Content/Site.css
@@ -21,11 +21,6 @@ nav {
     margin-bottom: 30px;
 }
 
-.navlink {
-    float: left;
-}
-
-.dellink {
-    float: right;
-    color: #f00;
+.compstyle {
+    color: #00ff21;
 }
