--- a/N01426963_passionproject/Views/Comp/DeleteConfirm.cshtml
+++ b/N01426963_passionproject/Views/Comp/DeleteConfirm.cshtml
@@ -14,6 +14,6 @@
 <nav>
     <a class="navlink" style="float:left" href="/Comp/Show/@Model.CompID">Cancel</a>
     <form method="POST" action="/Comp/Delete/@Model.CompID">
-        <button style="float:right" href="">Confirm Delete</button>
+        <button style="float:right; color:#ff0000" href="">Confirm Delete</button>
     </form>
 </nav>
