--- a/N01426963_passionproject/Views/Comp/List.cshtml
+++ b/N01426963_passionproject/Views/Comp/List.cshtml
@@ -12,7 +12,7 @@
 @foreach (var comp in Model)
 {
     <div class="list_item_row">
-        <div class="col-md-12"><a href="/Comp/Show/@comp.CompID">@comp.CompName</a></div>
+        <div class="compstyle"><a href="/Comp/Show/@comp.CompID">@comp.CompName</a></div>
     </div>
 }
 
